--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# enable H2 console at: http://localhost:8080/h2-console
+spring.h2.console.enabled=true
+#spring.h2.console.path=something-else
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
